--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="My portfolio as a full-stack developer."
     />
-
-    <link
-      href="%PUBLIC_URL%/assets/stylesheet.css"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="%PUBLIC_URL%/assets/stylesheet.css" rel="stylesheet" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
     <title>Ian Mugambi</title>
   </head>
   <body>
